# np

./: .gitignore  README.md  flake.nix  rpkgs.nix  test.R
.github/: copilot-instructions.md
.github/workflows/: check.yml  check_ed.yml  check_macos.yml  check_pr.yml  flakehub-publish-rolling.yml  update.yml
templates/ed/: .gitignore  README.md  flake.nix
templates/n/: flake.nix
templates/py/: flake.nix
templates/r/: Justfile  flake.nix  rpkgs.nix
templates/rde/: .devenv.flake.nix  README.md  REFACTORING.md  SUMMARY.md  flake.nix
templates/rde/.devenv/: bash  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-wal
templates/rde/.devenv/gc/: shell-7-link
templates/rde/hosts/: default.nix  julia.nix  python.nix  r.nix  utils.nix
templates/rde/lib/: mini-notify-config.lua  shell-hook.nix
templates/rde/overlays/: project-scripts.nix  python.nix  r.nix  rix.nix  theme.nix
templates/rde/scripts/: activateDevenv.sh  initProject.sh  initPython.sh  updateDeps.sh
templates/sci/: .gitignore  .marimo.toml  flake.nix  pypkgs.nix  pyproject.toml  rpkgs.nix
templates/sci_minimal/: pypkgs.nix
templates/sci_minimal/.zk/: config.toml  notebook.db
