[project]
name = "sci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.13.15",
    "polars>=1.30.0",
    "pytest>=8.3.5",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
